# MyLive

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/xhp/mylive/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: log.h  native-lib.cpp  queue.c  queue.h
app/src/main/java/com/example/xhp/mylive/: MainActivity.java
app/src/main/java/com/example/xhp/mylive/jni/: LiveNative.java
app/src/main/java/com/example/xhp/mylive/live/: AudioParam.java  AudioPusher.java  LivePusher.java  Pusher.java  VideoParam.java  VideoPusher.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/xhp/mylive/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
